--- a/home.html
+++ b/home.html
@@ -2,8 +2,8 @@
 
 <html>
   <head>
-    <title>Project Persona</title>
-    <link rel="stylesheet" href="index.css">
+    <title>Personas & Storyboarding</title>
+    <link rel="stylesheet" href="./index.css">
     <!-- TODO: add additional links here! e.g. fonts, icons, more stylesheets, etc. -->
     <meta content="width=device-width, initial-scale=1" name="viewport" />
   </head>
