--- a/home.html
+++ b/home.html
@@ -65,7 +65,7 @@
         an empathy map about how this user may think, feel, say and do.
       </p>
       <img id="persona1" src="./persona1.png" />
-      <p id="personabackground1"> Mia Powell is a junior student in university who has just moved to an off-campus apartment. The new apartment has a beautiful kitchen, and thus she decided to utilize it and start
+      <p id="personabackground1"> Carrie Clayton is a junior student in university who has just moved to an off-campus apartment. The new apartment has a beautiful kitchen, and thus she decided to utilize it and start
       to learn cooking. She bought a lot of kitchen appliances, including this rice cooker, but she has never used a rice cooker before, and this is when she just opened the box and prepared to use it for the first time.
       </p>
       <p id="personaanalysis1"> The key interface problem for this persona is that, for someone who has not used a similar product before, users may encounter difficulty in understanding the functionality of the buttons by
@@ -74,22 +74,22 @@
     </div>
     <div class='div4'>
       <img id="persona2" src="./persona2.png" />
-      <p id="personabackground2"> Will Bennett is a young professional who lives by himself. He enjoys cooking and he prepares his own dinner everyday. However, his old rice cooker was broken and he has to purchase a new one.
-        Today is Friday, and Will has just got home from work. The new rice cooker arrived this afternoon and he planned to use it tonight. But he has asked a few friends to go to cinema together after dinner, and there is only one
-        and a half hour before the it starts. Will decided to cook a quick meal so that he won't be late for the movie.
+      <p id="personabackground2"> Jonathan Kerr is a young professional who lives by himself. He enjoys cooking and he prepares his own dinner everyday. However, his old rice cooker was broken and he has to purchase a new one.
+        Today is Friday, and Jonathan has just got home from work. The new rice cooker arrived this afternoon and he planned to use it tonight. But he has asked a few friends to go to cinema together after dinner, and there is only one
+        and a half hour before the it starts. Jonathan decided to cook a quick meal so that he won't be late for the movie.
       </p>
       <p id="personaanalysis2"> The key interface problem for this persona is that, while there are words next to the screen that indicates different modes, users may feel uncertain about what each mode is designed for even for
-         an experienced user like Will.<br> This persona represents a very common group of users. People may have experiences in similar product, but every product offers different mode selection, and the interface of this rice
-          cooker didn't clearly explain them. The users will feel confused when they have the needs to use specific modes, and they may or may not be able to figure it out based on previous experience.</p>
+         an experienced user like Jonathan.<br> This persona represents a very common group of users. People may have experiences in similar product, but every product offers different mode selection, and the interface of this rice
+          cooker didn't clearly explain them. The users Jonathan feel confused when they have the needs to use specific modes, and they may or may not be able to figure it out based on previous experience.</p>
     </div>
     <h1 class="storyboard">Storyboard</h1>
     <div class="div5">
-      <p>I decided to create a storyboard for the Mia Powell's persona, and the story begins as she prepares to use it for the first time.
+      <p>I decided to create a storyboard for the Carrie Clayton's persona, and the story begins as she prepares to use it for the first time.
       </p>
       <div class="storyrow">
         <figure class="storyfig">
           <img src="storyboard1.png" width="440" height="440" style="vertical-align:top;"/>
-          <figcaption class="storyfigcaption">Mia has just finished today's class, and she is ready to use the rice cooker for the first time.<br><br></figcaption>
+          <figcaption class="storyfigcaption">Carrie has just finished today's class, and she is ready to use the rice cooker for the first time.<br><br></figcaption>
         </figure>
         <figure class="storyfig">
           <img src="storyboard2.png" width="440" height="440" style="vertical-align:top;"/>
@@ -125,7 +125,7 @@
         </figure>
         <figure class="storyfig">
           <img src="storyboard9.png" width="440" height="440" style="vertical-align: top;"/>
-          <figcaption class="storyfigcaption">After an hour of cooking, the cooking is finally done. Mia is ready for the dinner!<br><br></figcaption>
+          <figcaption class="storyfigcaption">After an hour of cooking, the cooking is finally done. Carrie is ready for the dinner!<br><br></figcaption>
         </figure>
       </div>
     </div>
